🐛 Fix carousel causing page horizontal overflow on mobile
Make .vh-tag-carousel a flex container so __viewport becomes a flex
item. Flex items with overflow-x: scroll have an automatic minimum
size of 0, preventing the ~1700px track min-content from propagating
up to the ancestor grid item and blowing out the page width.

--- a/src/vh-tag-carousel/style.scss
+++ b/src/vh-tag-carousel/style.scss
@@ -1,7 +1,10 @@
 .vh-tag-carousel {
   position: relative;
+  display: flex;
 
   &__viewport {
+    flex: 1;
+    min-width: 0;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
